# liho

./: .gitignore  README.md  asset-manifest.json  index.html  package-lock.json  package.json  precache-manifest.3440c2fa42df5c4d17fed54e0819e40d.js  precache-manifest.447bc13b12f7a18e9571e2d67c6ad4cd.js  precache-manifest.5a6e7fb0afed114587ca3ca99a371cdc.js  precache-manifest.8434f5b4ffa4e88efc5a2b0f15f3f1c0.js  service-worker.js
backend/: .dockerignore  Dockerfile  console_output.txt  cube.glb  db.sqlite3  docker-compose.yml  file.glb  holi.glb  jugar.ipynb  manage.py  modelo.csv  modelo_2.csv  pyproject.toml  render.yaml  requirements.txt  settings.py  urls.py
backend/api/: models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_file_title_alter_gltffile_url.py  0002_react_delete_room.py  0003_alter_gltffile_url.py  0003_react_csv.py  0004_alter_file_url_alter_gltffile_url.py  0004_remove_react_csv.py  0005_alter_file_url.py  0005_file.py  0006_alter_file_url.py  0006_gltffile_delete_react_remove_file_file_file_title_and_more.py  0006_rename_file_file_csv.py  0007_alter_gltffile_url.py  0007_delete_react_remove_file_csv_file_csv_url_file_title.py  0007_gltffile_url.py  0008_gltf_rename_csv_url_file_url.py  0009_delete_gltf_rename_url_file_csv_url.py  0010_gltf_rename_csv_url_file_url.py  0011_gltffile_delete_gltf.py  0012_gltffile_file_alter_gltffile_gltf_file.py  0013_remove_gltffile_id_remove_gltffile_name_and_more.py  0014_remove_gltffile_gltf_file_alter_file_url.py  (+8 more)
backend/backend/: settings.py
backend/liho/: apps.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
backend/nginx/: nginx.conf
(+115 files in other folders)
