[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Elisa Honorato"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11.0"
django = "^4.2.2"
bpy = "^3.5.0"
django-rest-framework = "^0.1.0"
pandas = "^2.0.2"
django-cors-headers = "^4.1.0"
gunicorn = "^20.1.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
