[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Elisa <elisahonoratolira@uc.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11.0"
django = "^4.1.7"
django-rest-framework = "^0.1.0"
pandas = "^2.0.2"
bpy = "^3.5.0"
django-cors-headers = "^3.14.0"
gunicorn = "^20.1.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
